[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-utils"
version = "0.2.5"
authors = [
  { name="Nicolas van Kempen", email="nvankemp@gmail.com" },
  { name="Emery Berger", email="emery.berger@gmail.com" },
  { name="Sam Stern", email="sternj@umass.edu" }
]
dependencies = ["tiktoken>=0.5.2", "openai>=1.11.0", "botocore>=1.34.34", "botocore-types>=0.2.2", "types-requests>=2.31.0.20240125"]
description = "Utilities for our LLM projects (CWhy, ChatDBG, ...)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/plasma-umass/llm-utils"
"Bug Tracker" = "https://github.com/plasma-umass/llm-utils/issues"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
